# Inventory-System-CPP

./: .clangd  .gitignore  CMakeLists.txt  compile64.bat  compileTest.bat  compile_commands.json  example.db  inventory.db  openExec.bat
.cache/clangd/index/: apiDB.hpp.6E4790CCC6311E4F.idx  item.hpp.4EEA4A3F985BCFA7.idx  main.cpp.DE7C5EEB36A9FA33.idx  sqlite3.h.8D39F21336E7F9E3.idx  tableCreationTest.cpp.AD3A7F0604CA5875.idx
include/: apiDB.hpp  item.hpp
resources/: style.css
src/: SQLtables.cpp  main.cpp
tests/: apiIntegration.cpp  cssAPI.cpp  helloWorld.cpp  itemCreationTest.cpp  objectToDB.cpp  sqliteTest.cpp  tableCreationTest.cpp
